bug 100175: innerHTML smushes multiple options together on select r+sr=bzbarsky